--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,6 +116,9 @@ label {
   font-size: 16px;
   cursor: pointer;
 }
+#buy_button {
+  padding: 15px 39px;
+}
 input {
   margin-left: 5px;
 }
@@ -140,14 +143,22 @@ input {
     padding: 0px;
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 980px) {
     .flex-container {
       flex-direction: column;
     }
-  
   }
 
 
+
+#sidenav-flex {
+  flex-basis:1000px;
+}
+@media screen and (min-width: 2000px) {
+  #sidenav-flex {
+    flex-basis:600px;
+  }
+}
 
 
 
